tests/ui/test_fail/04-bad-sync-cond.stderr
error[E0537]: invalid predicate `unknown`
 --> tests/ui/test_fail/04-bad-sync-cond.rs:2:21
  |
2 | #[maybe_async::test(unknown(feature="async", async_std::test))]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
